[package]
name = "shader_frg_raymarch_basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
shader_frg_plugin_viewer = { path = "../../plugins/shader_frg_plugin_viewer" }
shader_frg_plugin_lib = { path = "../../plugins/shader_frg_plugin_lib" }
